# segBench

./: dataset.py  evaluator.py  inference_fiftyone.py  loss.py  pyproject.toml  trains.py  view_results.py
models/backbones/: dinov3.py  mit.py  mobilenet.py  resnet.py  universal.py  yolo.py
models/heads/: head_ppm.py  head_segformer.py  my_head.py
